views: don't open context menus for VKEY_APPS on Mac

On Mac, VKEY_APPS is actually the right command key, which is not supposed to
behave this way in menus.

Bug: 875559
Change-Id: I78329273f4ddd5c5cd9aed89669d46f722de118b
Reviewed-on: https://chromium-review.googlesource.com/1186705
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585522}
Former-commit-id: c39e4f783f506f3d8f3538814b0082a60af5aa05